syntax = "proto3";
import "google/protobuf/empty.proto";

package ecommerce;

service ShoppingCartService {
  rpc GetShoppingCartsByUser(GetShoppingCartsRequest) returns (GetShoppingCartsResponse);
  rpc CreateShoppingCart(CreateShoppingCartRequest) returns (ShoppingCart);
  rpc DeleteShoppingCart(DeleteShoppingCartRequest) returns (google.protobuf.Empty);
  rpc UpdateShoppingCart(UpdateShoppingCartRequest) returns (google.protobuf.Empty);
}

message GetShoppingCartsRequest {
  string userId = 1;
}

message GetShoppingCartsResponse {
  repeated ShoppingCart shoppingCarts = 1;
}

message CreateShoppingCartRequest {
  string userId = 1;
  string itemId = 2;
  int32 amount = 3;
}

message DeleteShoppingCartRequest {
  string id = 1;
}

message UpdateShoppingCartRequest {
  string id = 1;
  int32 amount = 2;
}

message ShoppingCart {
  string id = 1;
  string userId = 2;
  string itemId = 3;
  int32 amount = 4;
  string createdAt = 5;
  string updatedAt = 6;
}
